Check for unused at batch level (#255)